--- a/ulabsmodule/src/main/AndroidManifest.xml
+++ b/ulabsmodule/src/main/AndroidManifest.xml
@@ -5,5 +5,6 @@
     <uses-permission android:name="android.permission.NFC"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
 
 </manifest>
