--- a/ulabsmodule/build.gradle
+++ b/ulabsmodule/build.gradle
@@ -1,14 +1,37 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+version = "1.0.1"
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray{
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    configurations = ['archives']
+    pkg{
+        repo = "Ulabs"
+        name = "module"
+        websiteUrl = "https://github.com/UlabsDevelopmentTeam/UlabsModuleForAndroid"
+        vcsUrl = "https://github.com/UlabsDevelopmentTeam/UlabsModuleForAndroid.git"
+        licenses = ["Apache-2.0"]
+
+        publish = true
+    }
+}
 
 android {
     compileSdkVersion 26
     buildToolsVersion "27.0.1"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -17,6 +40,41 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+def siteUrl = 'https://github.com/UlabsDevelopmentTeam/UlabsModuleForAndroid'      // Homepage URL of the library
+def gitUrl = 'https://github.com/UlabsDevelopmentTeam/UlabsModuleForAndroid.git'   // Git repository URL
+group = "com.ulabs"
+install{
+    repositories.mavenInstaller{
+        pom{
+            project{
+                packaging 'aar'
+
+                name 'module'
+                url siteUrl
+
+                licenses{
+                    license{
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers{
+                    developer{
+                        id 'ulabs'
+                        name 'ljm'
+                        email 'obiz.co.kr@gmail.com'
+                    }
+                }
+                scm{
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
         }
     }
 }
@@ -30,3 +88,27 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+task findConventions <<{
+    println project.getConvention()
+}
+
