--- a/ulabsmodule/src/main/AndroidManifest.xml
+++ b/ulabsmodule/src/main/AndroidManifest.xml
@@ -6,5 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
