--- a/ulabsmodule/build.gradle
+++ b/ulabsmodule/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
-version = "3.5.5"
+version = "3.6.0"
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
@@ -25,13 +25,13 @@ bintray{
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "27.0.1"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
-        versionName "3.5.5"
+        versionName "3.6.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -80,14 +80,14 @@ install{
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.zxing:core:3.2.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.+'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.google.zxing:core:3.2.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 task sourcesJar(type: Jar) {
