--- a/ulabsmodule/build.gradle
+++ b/ulabsmodule/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 18
         targetSdkVersion 26
         versionCode 1
-        versionName "5.2.0"
+        versionName "5.3.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -30,6 +30,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.zxing:core:3.2.0'
     implementation files('libs/BixolonLabelPrinterV120.jar')
+    implementation files('libs/bixolon_printer_v130.jar')
+    implementation files('libs/jpos118-controls.jar')
+    implementation files('libs/xerces.jar')
     testImplementation 'junit:junit:4.12'
 }
 
